--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,12 @@
+<!-- 
+Name: Meet Pandya
+SID: 116480203
+Email: mpandya6@myseneca.ca 
+Section: ZAA
+WEB Final Assessment
+Public URL: https://meetpandya127.github.io/src/index.html
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
